<resources>
    <string name="app_name">DailyCoding</string>
    <string name="onNext">다음</string>
    <string name="onStart">시작하기</string>
    <string name="welcome01">회원가입이 완료되었습니다.</string>
    <string name="welcome02">예비 개발자 %1$s 님,\n환영합니다!</string>
    <string name="welcome03"><b>다양한 프로그래밍 언어</b>의 소개를 읽어보고\n나에게 맞는 언어를 찾아보세요.</string>
    <string name="welcome04"><b>다양한 프로그래밍 예제</b>들을 풀어보며\n코딩에 익숙해져 보세요.</string>
    <string name="welcome05">개발자들이 직접 경험해보고\n<b>검증한 강의</b>들을 추천 받을 수 있습니다.</string>
    <string name="profile_agree">개인정보 수집에 동의합니다.</string>
    <string name="ready">자, 준비 되셨나요?</string>
    <string name="start">문제풀기</string>
    <string name="ranking">예진 님의 현재 랭킹</string>
    <string name="hotNews">개발자들의 Pick ! </string>
    <string name="recruit">현재 채용 공고</string>
    <string name="hottest">실시간 인기글</string>
    <string name="mode">화면 모드</string>
    <string name="alarm">알림 수신 동의</string>
    <string name="faq">문의하기</string>
    <string name="logout">로그아웃</string>
    <string name="email">Daily@google.com</string>
    <string name="home">홈</string>
    <string name="course">뉴스</string>
    <string name="news">코스</string>
    <string name="languages">프로그래밍 언어 소개</string>
    <string name="setting">환경설정</string>
    <string name="greeting01">안녕하세요, 어스 님.</string>
    <string name="greeting02">오늘도 활기차게 공부해봐요.</string>
    <string name="rank_check">랭킹 확인</string>
    <string name="rank_info">모든 랭크는 매일 오전 12시와 오후 12시에 갱신됩니다.</string>
    <string name="rank_other">다른 사용자들의 랭킹</string>
    <string name="rank1">1위</string>
    <string name="rank2">2위</string>
    <string name="rank3">3위</string>
    <string name="rankDate">2021.01.03 PM 12:00 기준</string>
    <string name="rank_tempName">최길동</string>
    <string name="Java">JAVA</string>
    <string name="C">C++</string>
    <string name="Python">Python</string>
    <string name="course_title">기출문제 선택</string>
    <string name="unsolvedProblem">잠깐! 풀다 만 문제가 있어요!</string>
    <string name="leftProblemsTitle">남은 문제 수 보기</string>
    <string name="problemDetail_result_title">#결과값</string>
    <string name="languageIntroduction_title">프로그래밍 언어소개</string>
    <string name="course_progress">C++문제 풀이를 50% 완료했습니다.</string>
    <string name="problemDialog_message0">다 풀지 않은 문제가 남아있습니다.\n<b>이어서 풀이</b>하시겠습니까?</string>
    <string name="problemDialog_message1">아직 모든 문제를 풀지 않았습니다.\n<b>풀이를 종료</b>하시겠습니까?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">검색어를 입력하세요</string>
    <string name="pick_source">개발자들이 직접 경험하고,도움을 받은, 검증된 교육 자료들입니다.</string>
    <string name="promotion_btn">프로모션</string>
    <string name="chanel_btn">채널</string>
    <string name="news_item_title">title</string>
    <string name="news_item_context">context</string>
    <string name="news_item_review">review</string>
    <string name="news_item_btn"><![CDATA[커리큘럼 보러가기>>]]></string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="agree">이용약관에 <font color="#48FF51"> <b>동의</b></font>하시면 <font color="#48FF51"><b>회원가입</b></font>이 <font color="#48FF51"><b>완료</b></font>됩니다.</string>
    <string name="total_agree">전체 이용약관에 동의합니다.</string>
    <string name="agree1">서비스 이용약관 <font color="#48FF51"><b>(필수)</b></font></string>
    <string name="agree2">개인정보 처리방침 <font color="#48FF51"><b>(필수)</b></font></string>
    <string name="agree3">이벤트 마케팅 수신동의 (선택)</string>
    <string name="agree_btn">확인</string>
    <string name="wrong_answer_title">오답노트</string>
    <string name="wrong_answer_content">변수 생성 예제 1번</string>
    <string name="news_item_content">content</string>
    <string name="wrong_answer">오답노트 내용</string>
    <string name="code_it">코린이를 위한 강의, <font color="#48FF51">Code it </font></string>
    <string name="news_activity_title">Code it</string>
    <string name="code_it_content">#코린이를 위한 강의 #파이썬 #기초 탄탄</string>
    <string name="news_activity_course">개설과목</string>
    <string name="news_activity_course2">파이썬의 기초에 대해서, 파이썬 if문, 파이썬 while문</string>
    <string name="news_activity_code_it_review">코딩을 하나도 몰랐던 입장이었지만 Code it의 코린이 탈출 스쿨을 듣고 나서는 뚝딱뚝딱 할 수 있게 되었어요. 특히 파이썬에 대한 강의들이 굉장히 쉽고 재밌게 나와있는데 기본적인 문법을 익히는데 굉장히 효과적이었습니다. 한 강의에 20분 내지 30분 정도밖에 시간이 걸리지 않아 효율적이면서도 가볍게 들을 수 있어서 좋았습니다.</string>
    <string name="news_activity_button">사이트 방문하기</string>
    <string name="news_text">개발자들의 <font color="#48FF51">Pick! </font></string>
    <string name="agree_check_content">이용약관 내용</string>
    <string name="profile_input">회원님의  <font color="#48FF51"> <b>프로필</b></font>을 입력해주세요</string>
    <string name="agree_check_cont2">
        개인정보처리방침\n수집하는 개인정보의 항목\n\n
        하루코딩은 서비스 제공에 관한 계약 이행, 이용자 식별, 서비스 개선, 신규 서비스 개발, 회원가입, 상담을 위하여 필요 최소한의 개인정보를 수집합니다.\n\n
        하루코딩은 이용자의 사전 동의를 받고, 서비스의 본질적 기능을 수행하기 위하여 반드시 필요한 필수항목과 보다 특화된 서비스를 제공하기 위한 선택항목을 수집합니다.\n\n
        이용자는 선택 항목 수집에 동의하지 않아도 서비스 이용에 제한을 받지 않으며, 특화된 서비스를 이용하지 못할 뿐입니다.\n\n
        하루코딩은 가입을 위해 소셜 로그인을 이용하는 과정에서 해당 SNS로부터 닉네임, SNS아이디, 이메일주소, 프로필 이미지를 제공받습니다.\n\n
        하루코딩은 각 SNS의 정책과 약관, 이용자 동의 내역에 따라 SNS를 통하여 이용자의 개인정보를 수집할 수 있습니다.\n\n
        서비스 관련 이용 문의를 하거나, 권리침해 신고를 접수하는 경우에는 문의 접수 및 해결 과정에서 이메일, (휴대)전화번호를 수집 할 수 있습니다.\n\n
        모바일 서비스의 경우 그 특성상 단말기에 관한 정보(단말기 모델, 이동통신사 정보, 하드웨어 ID, ADID, 서비스 이용에 대한 기본 통계)가 자동 수집될 수 있으나, 이는 개인을 식별할 수 없는 형태입니다.\n\n
        단말기에 관한 정보 이외에 추가적으로 사용자 로그 정보, 서비스 이용기록, 앱 설치 정보, 브라우저 정보 등이 수집될 수 있습니다.\n\n
        사용자가 접속한 IP기반으로 국가 정보를 저장합니다.\n\n
        개인정보의 수집 및 이용목적\n\n
        회사는 수집한 정보를 다음과 같은 목적으로 이용합니다.\n\n
        - 이용자가 서비스를 원활히 이용할 수 있도록 돕기 위해\n\n
        - 서비스 이용에 따른 이용자 식별 및 부정 이용 방지를 위해\n\n
        - 서비스 이용에 관한 통계 데이터를 작성하기 위해\n\n
        - 서비스 개선에 필요한 설문 조사 및 분석을 위해\n\n
        - 캠페인 및 이벤트 등의 추첨 및 선물 발송을 위해\n\n
        - 이용자로부터 문의가 있을 때 본인 여부를 확인하고 문의사항에 대응하기 위해\n\n
        - 중요한 공지사항 등을 필요에 따라 공지하기 위해\n\n
        - 이벤트 등 광고성 정보의 전달을 위해\n\n
        - 유료 서비스 제공 과정에서 본인확인을 위해\n\n
        - 컨텐츠 이용 시 연령확인을 위해\n\n
        개인정보 수집방법\n\n
        회사는 서비스 제공을 위해 다음과 같은 방법으로 개인정보를 수집합니다.\n\n
        - 하루코딩 서비스의 회원가입 및 이용 과정에서 이용자로부터 직접 수집\n
        - 생성 정보 수집 툴을 통한 수집\n
        - 서면 양식, 팩스, 전화, 상담 게시판, 이메일을 통한 수집\n\n
        개인정보의 공유 및 제공\n\n
        회사는 원칙적으로 이용자의 개인정보를 이용자 사전 동의 없이 외부에 제공하지 않습니다. 다만 아래의 경우에는 예외로 합니다.\n\n
        - 이용자들이 사전에 동의한 경우\n\n
        - 법령의 규정에 의한 경우\n\n
        이용자의 권리와 그 행사방법\n\n
        - 이용자는 언제든지 등록되어 있는 자신의 개인정보를 조회하거나 수정할 수 있으며, 계정삭제를 요청할 수 있습니다.\n\n
        - 이용자가 개인정보의 오류에 대한 정정을 요청하신 경우에는 정정을 완료하기 전까지 당해 개인정보를 이용 또는 제공하지 않습니다.\n\n
        또한 잘못된 개인정보를 제3자에게 이미 제공한 경우에는 정정 처리결과를 제3자에게 지체 없이 통지하여 정정이 이루어지도록 하겠습니다.\n\n
        - 회사는 이용자의 요청에 의해 해지 또는 삭제된 개인정보를 아래 "개인정보의 보유 및 이용기간"에 명시된 바에 따라 처리하고 그 외의 용도로 열람 또는 이용할 수 없도록 처리하고 있습니다.\n\n
        개인정보의 보유 및 이용기간\n\n
        회사는 원칙적으로 개인정보의 수집 및 이용목적이 달성되면 이용자의 개인정보를 지체없이 파기합니다.\n\n
        단, 회사 내부방침이나 관계법령의 규정에 의하여 보존할 필요가 있는 경우에는 아래와 같이 일정 기간 동안 개인정보를 보관할 수 있습니다.\n\n
        [법령기준에 따라 별도 보관하는 경우]\n\n
        - 전자상거래 등에서 소비자 보호에 관한 법률\n
        계약 또는 청약철회 등에 관한 기록: 5년 보관\n
        대금결제 및 재화 등의 공급에 관한 기록: 5년 보관\n
        소비자의 불만 또는 분쟁처리에 관한 기록: 3년 보관\n\n
        - 통신비밀보호법\n접속 로그 기록: 3개월\n\n
        [내부 기준에 따라 별도 보관하는 경우]\n\n
        탈퇴회원의 CS 처리를 위해 닉네임, 프로필 이미지: 3개월\n
        회사의 개인정보 파기절차 및 방법은 다음과 같습니다.\n\n
        - 파기절차\n
        이용자가 서비스 이용 등을 위해 입력한 정보는 이용 목적이 달성된 후, 내부 방침 및 관련 법령에 따라 일정 기간 저장된 후 파기됩니다.\n\n
        해당 개인정보는 법률에 의한 경우가 아니고서는 보관되는 목적 외로 이용되지 않습니다.\n\n
        - 파기 방법\n
        종이에 출력된 개인정보는 분쇄기로 분쇄하고, 전자적 파일 형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다.\n\n
        개인정보 보호 책임자 및 연락처\n\n
        개인정보보호 책임,담당자\n\n
        이름 : 염정원\n
        직위 : CEO\n
        메일 : yeomjw0907@naver.com\n\n\n
        기타 개인정보침해에 대한 신고나 상담이 필요하신 경우에는 아래 기관에 문의하시기 바랍니다.\n\n
        개인정보침해신고센터(http://privacy.kisa.or.kr / 국번없이 118)\n
        대검찰청 사이버수사과(http://www.spo.go.kr / 국번없이 1301)\n
        경찰청 사이버안전국(http://cyberbureau.police.go.kr / 국번없이 182)\n\n
        개인정보의 기술적 관리적 보호조치\n\n
        하루코딩은 이용자들의 개인정보를 처리함에 있어 개인 정보가 분실, 도난, 유출, 변조 또는 훼손되지 않도록 안전성 확보를 다음과 같은 기술적·관리적 대책을 강구하고 있습니다.\n\n
        - 이용자의 개인정보는 암호화하여 저장·관리되고 있으며, 암호화 통신(SSL) 등을 통하여 전송하고, 비밀번호는 복호화 불가능하도록 일방향 암호화하여 저장·관리되고 있습니다.\n\n
        - 해킹이나 컴퓨터 바이러스 등에 의해 이용자의 개인정보가 유출되거나 훼손되는 것을 막기 위해 외부로부터 접근이 통제된 구역에 시스템을 설치하고 있습니다.\n\n
        - 개인정보의 훼손에 대비해서 자료를 수시로 백업하고, 최신 백신프로그램을 이용하여 이용자들의 개인정보나 자료가 유출되거나 손상되지 않도록 방지하고 있으며, 암호화 통신(SSL) 등을 통하여 네트워크상에서 개인정보를 안전하게 전송할 수 있도록 하고 있습니다.\n\n
        - 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있으며, 기타 시스템적으로 보안성을 확보하기 위한 가능한 모든 기술적 장치를 갖추려고 노력하고 있습니다.\n\n
        - 개인정보를 처리하는 직원을 최소화 하여 개인정보 유출에 대한 위험을 줄이고 있습니다.\n\n
        - 개인정보를 보관하는 데이터베이스 시스템과 개인정보를 처리하는 시스템에 대한 비밀번호의 생성과 변경, 그리고 접근할 수 있는 권한에 대한 체계적인 기준을 마련하고 지속적인 감사를 실시하고 있습니다.\n\n
        - 개인정보를 처리하는 임직원들을 대상으로 개인정보보호 의무와 보안에 대한 정기적인 교육이나 캠페인을 실시하고 있습니다.\n\n
        개인정보처리방침의 개정\n\n
        현 개인정보처리방침의 내용 추가, 삭제 및 수정이 있을 시에는 개정 최소 7일전부터 "'"공지사항"'"을 통해 고지할 것입니다.\n\n
        2021년 1월 4일 시행\n\n
    </string>
</resources>