<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton
        android:id="@+id/news_activity_left"
        android:layout_width="16dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/ic_bk_arrow_left">

    </ImageButton>

    <TextView
        android:id="@+id/news_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_activity_title"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/news_activity_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </TextView>
    <TextView
        android:id="@+id/news_activity_code_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_it"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/news_activity_title"
        app:layout_constraintStart_toStartOf="@id/news_activity_left"
        android:layout_marginTop="30dp">

    </TextView>
    <TextView
        android:id="@+id/news_activity_code_it_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_it_content"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/news_activity_left"
        app:layout_constraintTop_toBottomOf="@id/news_activity_code_it"
        android:layout_marginTop="8dp"
        >

    </TextView>
    <ImageView
        android:id="@+id/news_activity_image"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_activity_code_it_content"
        android:background="@drawable/round_border"
        android:src="@mipmap/ic_launcher"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        />
    <TextView
        android:id="@+id/news_activity_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/news_activity_image"
        app:layout_constraintStart_toStartOf="@id/news_activity_left"
        android:text="@string/news_activity_course"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/news_activity_course2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/news_activity_left"
        app:layout_constraintTop_toBottomOf="@id/news_activity_course"
        android:text="@string/news_activity_course2"
        android:textSize="10sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/news_activity_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/news_activity_course2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:text="@string/news_activity_code_it_review"
        android:textSize="10sp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/news_item_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/news_activity_button"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@color/color_primary_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />










</androidx.constraintlayout.widget.ConstraintLayout>