<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_item_linear"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="87dp"
        android:orientation="vertical"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="15dp"
        android:weightSum="10"
        >
        <TextView
            android:id="@+id/news_item_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/news_item_title"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_weight="2">

        </TextView>
        <TextView
            android:id="@+id/news_item_textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_item_content"
            android:textSize="9sp"
            android:layout_margin="5dp"
            android:layout_weight="6">
        </TextView>
        <TextView
            android:id="@+id/news_item_textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_item_review"
            android:textSize="8sp"
            android:layout_margin="5dp"
            android:layout_weight="2">
        </TextView>

</LinearLayout>
    <ImageView
        android:id="@+id/news_item_imageView"
        android:layout_width="118dp"
        android:layout_height="87dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_border"
        android:src="@mipmap/ic_launcher">
    </ImageView>



</LinearLayout>