<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/child_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/news_editText"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/round_border"
                android:hint="@string/search"
                android:padding="10dp"
                android:textSize="14sp">

            </EditText>

            <ImageButton
                android:id="@+id/news_searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="22dp"
                android:background="@android:color/transparent"
                android:src="@drawable/search">

            </ImageButton>

        </RelativeLayout>


        <TextView
            android:id="@+id/news_textView"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:text="@string/pick"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/news_textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/pick_source"
            android:textSize="10sp">

        </TextView>

        <LinearLayout
            android:id="@+id/news_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/news_promotionButton"
                android:layout_width="99dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#E5E5E5"
                android:text="@string/promotion_btn"
                android:textColor="@color/black"
                android:textSize="10sp">

            </Button>

            <Button
                android:id="@+id/news_chanelButton"
                android:layout_width="99dp"
                android:layout_height="35dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#E5E5E5"
                android:text="@string/chanel_btn"
                android:textColor="@color/black"
                android:textSize="10sp">

            </Button>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>