<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/agree_textView1"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="80dp"
        android:text="@string/agree"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="43dp">

    </TextView>

    <CheckBox
        android:id="@+id/agree_checkBox"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/check"
        android:button="@color/transparent"
        app:layout_constraintStart_toStartOf="@id/agree_textView1"
        app:layout_constraintTop_toBottomOf="@id/agree_textView1"

        />
    <TextView
        android:id="@+id/agree_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_agree"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/agree_checkBox"
        app:layout_constraintTop_toBottomOf="@id/agree_textView1"
        android:layout_marginTop="31dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp">

    </TextView>
    <View
        android:id="@+id/agree_line"
        android:layout_width="279dp"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/agree_checkBox"
        app:layout_constraintStart_toStartOf="@id/agree_checkBox"
        android:layout_marginTop="26dp">

    </View>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/agree_recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/agree_line"
        app:layout_constraintStart_toStartOf="@id/agree_checkBox"
        android:layout_marginTop="8dp">

    </androidx.recyclerview.widget.RecyclerView>
    <Button
        android:layout_width="74dp"
        android:layout_height="37dp"
        android:background="@drawable/round_border"
        android:textColor="#8C8C8C"
        android:text="@string/agree_btn"
        app:layout_constraintTop_toBottomOf="@+id/agree_recyclerView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>